--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
 	compile 'com.android.support:support-v4:21.0.3'
 	compile project (':define')
 	compile project (':libledselectlayout')
+	compile project (':dragndroplist')
+	compile project (':scriptdata')
 }
