--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -21,8 +20,13 @@
             android:name=".LedSetActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_led_set"
-            android:theme="@style/AppTheme"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name=".CreateScriptActivity"
+            android:label="@string/title_activity_create_script"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
